--- a/App.css
+++ b/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+h2
+{
+  font-size: 250px;
+  background: white;
+  background: linear-gradient(166deg,#FF0000 31%,#00FF00 16%,#0000FF 92%);
+   color: transparent;  
+  -webkit-background-clip: text;
+  background-size: 500% 500%;
+  animation: pandiyan 5s ease infinite;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  @keyframes pandiyan
+  {
+      0%
+      {
+         background-position: 0%;
+      }
+      50%
+      {
+          background-position: 100%;
+      }
+      100%
+      {
+          background-position: 0%;
+      }
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
